# model/v2/user.go
@@ -4,13 +4,14 @@ import (
 	"time"
 
 	"go.mongodb.org/mongo-driver/bson/primitive"
+	"thinkdev.app/think/runex/runexapi/model"
 )
 
 // User object for db
 type User struct {
 	UserID           primitive.ObjectID `json:"-" bson:"_id,omitempty"`
 	Email            string             `json:"email" bson:"email"`
-	Provider         []Provider         `json:"provider" bson:"provider"`
+	Provider         []model.Provider   `json:"provider" bson:"provider"`
 	FullName         string             `json:"fullname" bson:"fullname"`
 	FirstName        string             `json:"firstname" bson:"firstname"`
 	FirstNameTH      string             `json:"firstname_th" bson:"firstname_th"`
@@ -26,7 +27,7 @@ type User struct {
 	CreatedAt        time.Time          `json:"created_at" bson:"created_at"`
 	UpdatedAt        time.Time          `json:"updated_at" bson:"updated_at"`
 	Confirm          bool               `json:"confirm" bson:"confirm"`
-	Address          []Address          `json:"address" bson:"address"`
+	Address          []model.Address    `json:"address" bson:"address"`
 	EmergencyContact string             `json:"emergency_contact" bson:"emergency_contact"`
 	EmergencyPhone   string             `json:"emergency_phone" bson:"emergency_phone"`
 	Nationality      string             `json:"nationality" bson:"nationality"`
@@ -36,25 +37,22 @@ type User struct {
 }
 
 // Address customer
-type Address struct {
-	ID        primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
-	Address   string             `json:"address" bson:"address" binding:"required"`
-	Province  string             `json:"province" bson:"province" binding:"required"`
-	District  string             `json:"district" bson:"district" binding:"required"`
-	City      string             `json:"city" bson:"city" binding:"required"`
-	ZipCode   string             `json:"zipcode" bson:"zipcode" binding:"required"`
-	CreatedAt time.Time          `json:"created_at" bson:"created_at"`
-	UpdatedAt time.Time          `json:"updated_at" bson:"updated_at"`
-}
+// swagger:model
+// type Address struct {
+// 	ID        primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
+// 	Address   string             `json:"address" bson:"address" binding:"required"`
+// 	Province  string             `json:"province" bson:"province" binding:"required"`
+// 	District  string             `json:"district" bson:"district" binding:"required"`
+// 	City      string             `json:"city" bson:"city" binding:"required"`
+// 	ZipCode   string             `json:"zipcode" bson:"zipcode" binding:"required"`
+// 	CreatedAt time.Time          `json:"created_at" bson:"created_at"`
+// 	UpdatedAt time.Time          `json:"updated_at" bson:"updated_at"`
+// }
 
-// Provider with provider open id
-type Provider struct {
-	ProviderID   string `json:"provider_id" bson:"provider_id"`
-	ProviderName string `json:"provider_name" bson:"provider_name"`
-}
-
-// UserProvider object for register from provider
-type UserProvider struct {
+// UserProviderRequest object for register from provider
+// swagger:model
+type UserProviderRequest struct {
+	// in: body
 	Email      string    `json:"email" bson:"email" binding:"exists,email"`
 	Provider   string    `json:"provider" bson:"provider" binding:"required"`
 	ProviderID string    `json:"provider_id" bson:"provider_id" binding:"required"`
